<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardBackgroundColor="@android:color/transparent"
    android:padding="5dp">

    <ImageView
        android:id="@+id/new_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/description"
        android:src="@drawable/resized_pill" />

    <TextView
        android:id="@+id/prescription_name"
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="15dp"
        android:text="@string/name"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:layout_marginLeft="235dp"
        android:layout_marginTop="55dp"
        android:layout_marginRight="10dp"
        android:id="@+id/quantity_items"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginLeft="290dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="10dp"
        android:id="@+id/schedule"
        />

    <TextView
        android:id="@+id/new_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|start"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="60dp"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:text="@string/time_to_take_prescription"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/take_meds"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="220dp"
        android:text="Take Meds" />

    <Button
        android:id="@+id/add_meds"
        android:layout_width="66dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="290dp"
        android:text="Add Meds" />


</androidx.cardview.widget.CardView>