<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.medtrackapp.add_medication_to_list">

    <EditText
        android:id="@+id/medicine_name"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop='100dp'
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/enter_name_of_prescription"
        />

    <EditText
        android:id="@+id/medicine_quantity"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:inputType="number"
        android:hint= "@string/number_of_medications"
        />

    <EditText
        android:id="@+id/dosage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/enter_dosage"
        />

    <EditText
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:ems="10"
        android:hint="@string/time"
        android:inputType="time" />

    <EditText
        android:id="@+id/numberOfDoses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:hint="Number of Doses per Day"
        android:inputType="number"/>

    <Button
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="450dp"
        android:text="@string/add_new_prescription"
        />

    <CheckBox
        android:id="@+id/Monday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="360dp"
        android:text="Monday" />

    <CheckBox
        android:id="@+id/Tuesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="360dp"
        android:text="Tuesday" />

    <CheckBox
        android:id="@+id/Wednesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="360dp"
        android:text="Wednesday" />

    <CheckBox
        android:id="@+id/Thursday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="400dp"
        android:text="Thursday" />

    <CheckBox
        android:id="@+id/Friday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="400dp"
        android:text="Friday" />

    <CheckBox
        android:id="@+id/Saturday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="400dp"
        android:text="Saturday" />

    <CheckBox
        android:id="@+id/Sunday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:layout_marginLeft="300dp"
        android:text="Sunday" />

</FrameLayout>